align items and correct header tags

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -213,6 +213,7 @@ header p {
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(3, 1fr);
   margin: 50px auto 0 auto;
+  align-items: start;
 }
 
 #project-previews li {
