--- a/scss/body/main/_project-previews.scss
+++ b/scss/body/main/_project-previews.scss
@@ -5,6 +5,7 @@
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 1fr);
     margin: 50px auto 0 auto;
+    align-items: start;
 }
 
 #project-previews li {
